<resources>
    <string name="app_name">Hotelset</string>
    <string name="tv_email">Email</string>
    <string name="tv_password">Password</string>
    <string name="msg_form_email">Enter your email</string>
    <string name="msg_form_password">Enter your password</string>
    <string name="msg_btLogin">Login</string>
    <string name="msg_btRegister">Register</string>
    <string name="msg_LoginErrorMessage">Error while trying to login.</string>
    <string name="msg_RegisterErrorMessage">Error while trying to register.</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Log Out</string>

    <string name="menu_hotel">Hoteles</string>
    <string name="menu_noticias">Noticias</string>
    <string name="menu_aboutus">Sobre Nosotros</string>

    <string name="msg_hotelForm_name">Hotel name</string>
    <string name="msg_hotelForm_titleNew">Title</string>
    <string name="msg_hotelForm_address">Hotel address</string>
    <string name="msg_hotelForm_description">Hotel description</string>
    <string name="msg_hotelForm_phonenumber">Hotel phone number</string>
    <string name="msg_hotelForm_website">Hotel website</string>
    <string name="msg_hotelForm_email">Hotel email</string>
    <string name="msg_add_noticia">Noticia added succesfully!</string>
    <string name="msg_add_hotel">Hotel added succesfully!</string>
    <string name="msg_update_hotel">Hotel updated succesfully!</string>
    <string name="msg_borrar">¿Seguro que desea eliminar el hotel seleccionado?</string>
    <string name="bt_delete">Eliminar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no">No</string>
    <string name="si">Sí</string>
    <string name="misionTexto">La misión de nosotros es proveer a los turistas en Costa Rica, una vía fácil y rápida para enterarse sobre los hoteles existentes y noticias de esta área desde la palma de su mano.</string>
    <string name="visionTexto">Deseamos ser una empresa líder en turismo en Costa Rica, reconocida por parte de los usuarios, empleados, clientes y todos los grupos de interés relacionados con la actividad de la compañía.</string>
    <string name="valoresTexto">Nuestros valores se basan en el Servicio, la Libertad, la Pasión y la Claridad en todas nuestras actividades.</string>
    <string name="misionTitle">Mision</string>
    <string name="visionTitle">Vision</string>
    <string name="valoresTitle">Valores</string>
    <string name="msg_saludos">Hola,saludos</string>
    <string name="msg_datos">Faltan datos</string>
    <string name="msg_map_view">Ver lugar en mapa</string>

    <string name="tv_latitud_lb">Latitud</string>
    <string name="tv_longitud_lb">Longitud</string>
    <string name="tv_altura_lb">Altura</string>
    <string name="todo">todo</string>





    <string name="msg_rating">Calificación</string>
    <string name="msg_imagen">Imagen del lugar</string>
    <string name="msg_graba_pausa">Graba o pausa grabaciÃ³n</string>
    <string name="msg_escucha_audio">Escucha nota de audio</string>
    <string name="msg_delete_nota">Borra nota de audio</string>
    <string name="msg_rec_stop_nota">Graba o detiene nota de audio</string>
    <string name="msg_take_photo">Toma foto</string>
    <string name="msg_rotate_l">Rota izquierda</string>
    <string name="msg_rotale_r">Rota a la derecha</string>
    <string name="msg_graba_audio">Grabando nota de audio</string>
    <string name="msg_detener_audio">Nota de audio detenida</string>
    <string name="msg_subiendo_audio">Subiendo Nota Audio</string>
    <string name="msg_subiendo_imagen">Subiendo imagen</string>
    <string name="msg_escuchar_audio">Escuchar nota de audio</string>
    <string name="nav_simbologia">Simbología</string>

    <string name="id_web" translatable="false">109482431547-b7nofjubtcinqel89ga7609dj4412h9k.apps.googleusercontent.com</string>

</resources>