<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_hotel"
            android:icon="@drawable/ic_hotel"
            android:title="@string/menu_hotel" />
        <item
            android:id="@+id/nav_noticias"
            android:icon="@drawable/ic_noticias"
            android:title="@string/menu_noticias" />
        <item
            android:id="@+id/nav_simbologia"
            android:icon="@drawable/ic_simbologia"
            android:title="@string/nav_simbologia" />
        <item
            android:id="@+id/nav_aboutUs"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/menu_aboutus" />
    </group>
</menu>