<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.hotel.UpdateHotelFragment" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/et_AddHotel_name"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="36dp"
            android:ems="20"
            android:hint="@string/msg_hotelForm_name"
            android:inputType="textPersonName"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="5dp" />

        <EditText
            android:id="@+id/et_AddHotel_address"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:ems="20"
            android:hint="@string/msg_hotelForm_address"
            android:inputType="textPersonName"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_AddHotel_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/msg_hotelForm_description"
            android:inputType="textPersonName"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_AddHotel_phonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/msg_hotelForm_phonenumber"
            android:inputType="phone"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_AddHotel_website"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:ems="20"
            android:hint="@string/msg_hotelForm_website"
            android:inputType="textPersonName"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_AddHotel_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/msg_hotelForm_email"
            android:inputType="textEmailAddress"
            android:textSize="20sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/bt_whatsapp"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/whatsapp_logo" />

            <ImageButton
                android:id="@+id/bt_phone"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_baseline_phone_24" />

            <ImageButton
                android:id="@+id/btPlay"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:contentDescription="@string/msg_escuchar_audio"
                android:src="@drawable/ic_play" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_latitud"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|center_horizontal|center_vertical"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_longitud"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|center_horizontal|center_vertical"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_altura"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|center_horizontal|center_vertical"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/bt_location"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:contentDescription="@string/msg_map_view"
                android:src="@drawable/ic_location"
                tools:ignore="ImageContrastCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_stars"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:orientation="horizontal">

            <RatingBar
                android:id="@+id/rb_stars"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="80dp"
                android:layout_height="21dp"
                android:layout_marginStart="76dp"
                android:layout_marginTop="12dp"
                android:numStars="5"
                android:rating="4"
                android:stepSize="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_name"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imagen"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:contentDescription="@string/msg_imagen"
            android:scaleType="centerInside"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/backgrounds/scenic" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btUpdateHotel"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="40dp"
            android:text="Update hotel"
            android:textAlignment="center"
            app:rippleColor="@color/purple_200" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>