<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".ui.about.AboutFragment">

    <Space
        android:layout_width="match_parent"
        android:layout_height="21dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="166dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="44dp"
            app:cardBackgroundColor="@color/purple_700"
            app:cardCornerRadius="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/title1"
                    android:layout_width="265dp"
                    android:layout_height="31dp"
                    android:layout_marginStart="60dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/misionTitle"
                    android:textAlignment="center"
                    android:textColor="#F8F8F8"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/description1"
                android:layout_width="375dp"
                android:layout_height="93dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/misionTexto"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="21dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="167dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="44dp"
            app:cardBackgroundColor="@color/purple_700"
            app:cardCornerRadius="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/title2"
                    android:layout_width="265dp"
                    android:layout_height="31dp"
                    android:layout_marginStart="60dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/visionTitle"
                    android:textAlignment="center"
                    android:textColor="#F8F8F8"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="152dp">

            <TextView
                android:id="@+id/description2"
                android:layout_width="382dp"
                android:layout_height="81dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/visionTexto"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="155dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="44dp"
            app:cardBackgroundColor="@color/purple_700"
            app:cardCornerRadius="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/title3"
                    android:layout_width="265dp"
                    android:layout_height="31dp"
                    android:layout_marginStart="60dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/valoresTitle"
                    android:textAlignment="center"
                    android:textColor="#F8F8F8"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/description3"
                android:layout_width="393dp"
                android:layout_height="89dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/valoresTexto"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>